unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/CS_Sales_Order_Schedule__c.object-meta.xml
<CustomObject>
    <label>Sales Order Schedule</label>
    <nameField>
        <displayFormat>RS-{00000000}</displayFormat>
        <label>Sales Order Schedules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>