unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Billing_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Billing_Calendar__c</fullName>
    <formula>TEXT(Sales_Order__r.Billing_Calendar__c)</formula>
    <label>Billing Calendar</label>
    <type>Text</type>
</CustomField>