unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <label>Billing Date</label>
    <summarizedField>CS_Billing_Schedule__c.Next_Billing_Date__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>