unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Billing_Schedule_Items_Pending_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Items_Pending_Count__c</fullName>
    <description>Rollup Count of BSIs with Status = Pending</description>
    <inlineHelpText>Rollup Count of BSIs with Status = Pending</inlineHelpText>
    <label>Billing Schedule Items Pending Count</label>
    <summarizedField>CS_Billing_Schedule__c.Billing_Schedule_Items_Pending_Count__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>