unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Billing_Schedule_Items_Still_In_Pending__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Items_Still_In_Pending__c</fullName>
    <description>Indicates whether BSIs are still in Pending status. True = statuses are still in pending.</description>
    <formula>Billing_Schedule_Items_Pending_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether BSIs are still in Pending status. True = statuses are still in pending.</inlineHelpText>
    <label>Billing Schedule Items Still In Pending</label>
    <type>Checkbox</type>
</CustomField>