unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Count_Billing_Hold_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_Billing_Hold_Lines__c</fullName>
    <description>Specifies that all billing for the Sales Order should be held</description>
    <inlineHelpText>Specifies that all billing for the Sales Order should be held</inlineHelpText>
    <label>Count Billing Hold Lines</label>
    <summarizedField>CS_Billing_Schedule__c.Billing_on_Hold__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>