unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Count_Revenue_Hold_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_Revenue_Hold_Lines__c</fullName>
    <description>The total number of Schedules with lines on Hold for Revenue Processing.</description>
    <inlineHelpText>The total number of Schedules with lines on Hold for Revenue Processing.</inlineHelpText>
    <label>Count Revenue Hold Lines</label>
    <summarizedField>CS_Revenue_Schedule__c.Revenue_on_Hold__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>