unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Last_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Billing_Date__c</fullName>
    <label>Last Billing Date</label>
    <summarizedField>CS_Billing_Schedule__c.Last_Billing_Period_End__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>