unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Open_After_Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_After_Rev_Rec_Date__c</fullName>
    <label>Open After Rev Rec Date</label>
    <summarizedField>CS_Revenue_Schedule__c.Open_After_Rev_Rec_Date__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>