unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Pending_Revenue_Forecast_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Pending_Revenue_Forecast_Recalculation__c</fullName>
    <label>Pending Revenue Forecast Recalculation</label>
    <summaryFilterItems>
        <field>CS_Revenue_Schedule__c.Pending_Forecast_Recalculation__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Revenue_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>