unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Rev_Rec_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Calendar__c</fullName>
    <formula>Sales_Order__r.Rev_Rec_Calendar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev Rec Calendar</label>
    <type>Text</type>
</CustomField>