unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Date__c</fullName>
    <label>Rev Rec Date</label>
    <summarizedField>CS_Revenue_Schedule__c.Next_Rev_Rec_Date__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>