unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Revenue_Schedule_Items_Pending_Count__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Items_Pending_Count__c</fullName>
    <label>Revenue Schedule Items Pending Count</label>
    <summarizedField>CS_Revenue_Schedule__c.Revenue_Schedule_Items_Pending_Count__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>