unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Sales_Order_Billing_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Billing_On_Hold__c</fullName>
    <formula>OR((Count_Billing_Hold_Lines__c &gt; 0), NOT(Sales_Order__r.Sold__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Billing On Hold</label>
    <type>Checkbox</type>
</CustomField>