unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Total_Billed_Qty_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Qty_To_Date__c</fullName>
    <description>Total quantity billed to date</description>
    <inlineHelpText>Total quantity billed to date</inlineHelpText>
    <label>Total Billed Qty To Date</label>
    <summarizedField>CS_Billing_Schedule__c.Total_Billed_Quantity_To_Date__c</summarizedField>
    <summaryForeignKey>CS_Billing_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>