unpackaged/main/default/objects/CS_Sales_Order_Schedule__c/fields/Total_Recognised_QTY_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Recognised_QTY_To_Date__c</fullName>
    <description>Total quantity recognised to date</description>
    <inlineHelpText>Total quantity recognised to date</inlineHelpText>
    <label>Total Recognised QTY To Date</label>
    <summarizedField>CS_Revenue_Schedule__c.Total_Recognised_Quantity_To_Date__c</summarizedField>
    <summaryForeignKey>CS_Revenue_Schedule__c.CS_Sales_Order_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>